Trunk
-----

 * UserException

Release 11.05.13
----------------

 * Faster opening of forms

 * 'Home' tab with application actions

 * add legend function to chart container
 
 * Workspace maximizes when double clicking on tab bar
 
 * Fix tab behavour of some editors
 
 * Support for editing columns in the frozen part of a table view
 
 * New DateTime Editor
 
   .. image:: _static/editors/DateTimeEditor_editable.png

 * More intuitive Code editor
 
 * More intuitive navigation pane
 
   .. image:: _static/controls/navigation_pane.png
 
 * progress dialog when records are deleted
 
 * FileEditor supports removing files after copying them
 
 * EntityAdmin changes
 
   * supports objects mapped with plain SQLAlchemy, documentation on how
     to use this
     
   * confirm_delete reworked to delete_mode

   * expanded_list_search option to tune which fields show up
   
 * ApplicationAdmin changes
 
   * actions_changed_signal

   * application actions show up in desktop workspace
   
     .. image:: _static/controls/desktop_workspace.png

 * postgres support for backup / restore
 
 * new actions : DocxApplicationAction, PixmapFormAction
 
 * Most editors now support background_color, editable and tooltip
   as dynamic attributes
 
Release 10.11.27
----------------

 * Tab based desktop

 * Faster table view
 
 * Improved search queries
 
 * Much more dynamic field attributes : tooltip, background_color, editable,
   choices, prefix, suffix, arrow

 * Document merge wizard
 
   .. image:: _static/mergedocumentwizard/wizard_widget.png
   
 * Support for SQLAlchemy 0.6.x
 
 * Charts and matplotlib integration
 
     .. image:: _static/editors/ChartEditor_editable.png 
     
 * Move from PyExcelerator to xlwt and xlrd
 
 * Move to new style signal/slot connections
 
 * Support for frozen columns in a table view
 
 * Faster backup and restore
   
Release 10.07.02
----------------

 * Expanded search and filter options

   .. image:: _static/controls/header_widget.png